--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>D3.js</title>
+    <style>
+        .container {
+            width: 250px;
+            height: 200px;
+        }
+    </style>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="app.js" defer></script>
 </head>
