Create bars within the container. But it layout vertically because it is <div>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             width: 250px;
             height: 200px;
         }
+
+        .bar {
+            background-color: #720570;
+        }
     </style>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="app.js" defer></script>
