--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         .container {
             width: 250px;
             height: 200px;
+            display: flex;
+            justify-content: space-around;
         }
 
         .bar {
