Change div to svg. Without the position info, all svg will stack on top of each other

--- a/index.html
+++ b/index.html
@@ -7,21 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>D3.js</title>
     <style>
+/*
         .container {
             width: 250px;
             height: 200px;
             display: flex;
             justify-content: space-around;
         }
-
         .bar {
             background-color: #720570;
+        }
+*/
+
+        .container {
+            width: 250px;
+            height: 200px;
+            border: 1px solid #720570;
+        }
+        .bar {
+            fill: #720570;
         }
     </style>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="app.js" defer></script>
 </head>
 <body>
-    <div></div>
+<!--    <div></div>-->
+    <svg></svg>
 </body>
 </html>
