--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             fill: #720570;
         }
     </style>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js" defer></script>
+    <script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
     <script src="app.js" defer></script>
 </head>
 <body>
